# audio-cloze

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  asr_utils.py  audio_vocab_miner.py  benchmark_backends.py  benchmark_whisper.py  channels.txt  eval_asr_accuracy.py  pyproject.toml  sources.txt
docs/: hosting.md
eval_samples/: align_ep499_report.json  align_ep499_report.md  eval_compare.html  eval_results.json
experiments/: align_compare.py
scripts/: publish_site.py
